--- a/index.html
+++ b/index.html
@@ -83,7 +83,23 @@
             </li>
         </ul>
     </div>
-
+    <div id="modal" class="overlay">
+        <div class="popup">
+            <h2>Congratulations !</h2>
+            <a class="close" href=#>x</a>
+            <div class="content-1">
+                <p>Congratulations, you're a winner !!!</p>
+            </div>
+            <div class="content-2">
+                <p>You made <span id=totalMoves></span> moves </p>
+                <p>in <span id=totalTime></span></p>
+                <p>Your rating is: <span id=starRating></span></p>
+            </div>
+            <button id="play-again" onclick="restartGame()">
+                    Play again 
+            </button>
+        </div>
+    </div>
     <script src="js/app.js"></script>
 </body>
 
