--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><i class="fa fa-star"></i></li>
             </ul>
 
-            <span class="moves">3</span> Moves
+            <span class="moves">3 Moves</span>
             <span class="timer">00:00</span>
             <div class="restart" id="restart_button">
                 <i class="fa fa-repeat"></i>
@@ -83,22 +83,23 @@
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
-    </div>
-    <div id="modal" class="overlay">
-        <div class="popup">
-            <h2>Congratulations !</h2>
-            <a class="close" href=#>x</a>
-            <div class="content-1">
-                <p>Congratulations, you're a winner !!!</p>
-            </div>
-            <div class="content-2">
-                <p>You made <span id=totalMoves></span> moves </p>
-                <p>in <span id=totalTime></span></p>
-                <p>Your rating is: <span id=starRating></span></p>
-            </div>
-            <button id="play-again" onclick="restartGame()">
+
+        <div id="modal" class="overlay">
+            <div class="popup">
+                <h2>Congratulations !</h2>
+                <a class="close" href=#>x</a>
+                <div class="content-1">
+                    <p>Congratulations, you're a winner !!!</p>
+                </div>
+                <div class="content-2">
+                    <p>You made <span id=totalMoves></span> moves </p>
+                    <p>in <span id=totalTime></span></p>
+                    <p>Your rating is: <span id=starRating></span></p>
+                </div>
+                <button id="play-again" onclick="restartGame()">
                     Play again 
-            </button>
+                </button>
+            </div>
         </div>
     </div>
     <script src="js/app.js"></script>
